--- a/src/page_modules/home/Home.css
+++ b/src/page_modules/home/Home.css
@@ -1,11 +1,13 @@
 .home-title {
   text-align: center; }
 
-.card {
+.home-card {
   display: flex;
   text-align: center;
   justify-content: center;
   flex-direction: column;
   align-content: center; }
-  .card .home-card-image {
-    width: 100px; }
+  .home-card .home-card-image {
+    width: 100px;
+    display: block;
+    margin: 0 auto; }
