--- a/src/shared_modules/Card/Card.css
+++ b/src/shared_modules/Card/Card.css
@@ -1,4 +1,6 @@
 .card {
   display: flex;
   justify-content: center;
-  align-content: center; }
+  align-content: center;
+  border: 1px solid #e2e2e2;
+  border-radius: 15px; }
