Appointment config reducer

--- a/src/shared_modules/Card/Card.scss
+++ b/src/shared_modules/Card/Card.scss
@@ -8,6 +8,8 @@
     align-content: center;
     border: 1px solid $brandBorderGrey;
     border-radius: $borderRadius;
+    padding: 30px; 
+    margin: 10px 0; 
     
 
 }
