--- a/src/shared_modules/Stepper/Stepper.scss
+++ b/src/shared_modules/Stepper/Stepper.scss
@@ -11,6 +11,9 @@
         padding: 5px; 
         border: 1px solid $brandDeepblue;
         border-radius: 50%;
+        &:hover{
+            cursor: pointer;
+        }
     
     }
 
