--- a/src/shared_modules/Card/Card.css
+++ b/src/shared_modules/Card/Card.css
@@ -3,4 +3,6 @@
   justify-content: center;
   align-content: center;
   border: 1px solid #e2e2e2;
-  border-radius: 15px; }
+  border-radius: 15px;
+  padding: 30px;
+  margin: 10px 0; }
