--- a/src/shared_modules/BackButton/BackButton.css
+++ b/src/shared_modules/BackButton/BackButton.css
@@ -1,33 +1,30 @@
-.top-content {
-  margin-bottom: 20px;
-  margin-left: -10px; }
-  .top-content .back {
+.back {
+  display: inline-block;
+  color: #808080;
+  background-color: #fd7e1c;
+  text-align: left;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+  max-width: 100px; }
+  .back:before {
+    content: "";
     display: inline-block;
-    color: #808080;
-    background-color: transparent;
-    text-align: left;
-    border: none;
-    cursor: pointer;
-    font-size: 1.1rem;
-    display: flex;
-    align-items: center;
-    max-width: 100px; }
-    .top-content .back:before {
-      content: "";
-      display: inline-block;
-      background: url(../../assets/images/icons/arrow-left-g.svg) no-repeat;
-      width: 22px;
-      height: 28px;
-      margin-right: 8px; }
-    .top-content .back:hover:before {
-      background: url(../../assets/images/icons/arrow-left-o.svg) no-repeat; }
-    .top-content .back .button-label {
-      margin-left: 20px; }
-    .top-content .back:hover {
-      background-color: transparent;
-      color: #fd7e1c; }
-    .top-content .back:focus {
-      outline: 0px; }
+    background: url(../../assets/images/icons/arrow-left-g.svg) no-repeat;
+    width: 22px;
+    height: 28px;
+    margin-right: 8px; }
+  .back:hover:before {
+    background: url(../../assets/images/icons/arrow-left-o.svg) no-repeat; }
+  .back .button-label {
+    margin-left: 20px; }
+  .back:hover {
+    color: #ffffff; }
+  .back:focus {
+    outline: 0px; }
 
 .forgot-card .top-content,
 .setpassword-card .top-content {
