--- a/src/shared_modules/Button/Button.scss
+++ b/src/shared_modules/Button/Button.scss
@@ -2,46 +2,50 @@
 @import "../../assets/scss/variables";
 @import "../../assets/scss/mixins";
 
-.button {
+.button{
+	
+	.back-button {
+		display: inline-block;
+		color: $brandMediumGrey;
+		background-color: transparent;
+		text-align: left;
+		border: none;
+		cursor: pointer;
+		font-size: 1.1rem;
+		display: flex;
+		align-items: center;
+		max-width: 100px;
+		&:before {
+			content: "";
+			display: inline-block;
+			background: url(../../assets/images/icons/arrow-left-g.svg) no-repeat;
+			width: 22px;
+			height: 28px;
+			margin-right: 8px;
+		}
+		&:hover:before {
+			background: url(../../assets/images/icons/arrow-left-o.svg) no-repeat;
+		}
+		.button-label {
+			margin-left: 20px;
+		}
+		&:hover {
+			background-color: transparent;
+			color: $brandOrange;
+		}
+		&:focus {
+			outline: 0px;
+		}
+	}
+	
+	
+	.rounded-button{
+		background-color: coral;
+	}
+	
+	.link-button{
+		background-color: blue;
+	}
 }
 
-.back-button {
-	display: inline-block;
-	color: $brandMediumGrey;
-	background-color: transparent;
-	text-align: left;
-	border: none;
-	cursor: pointer;
-	// font-family: $text;
-	font-size: 1.1rem;
-	display: flex;
-	align-items: center;
-	max-width: 100px;
-	//        transition: color 300ms ease-in-out;
-	&:before {
-		content: "";
-		display: inline-block;
-		background: url(../../assets/images/icons/arrow-left-g.svg) no-repeat;
-		width: 22px;
-		height: 28px;
-		margin-right: 8px;
-		// @include phone-large {
-		//     width: 20px;
-		//     height: 24px;
-		//     margin-right: 0px;
-		// }
-	}
-	&:hover:before {
-		background: url(../../assets/images/icons/arrow-left-o.svg) no-repeat;
-	}
-	.button-label {
-		margin-left: 20px;
-	}
-	&:hover {
-		background-color: transparent;
-		color: $brandOrange;
-	}
-	&:focus {
-		outline: 0px;
-	}
-}
+
