--- a/src/shared_modules/Stepper/Stepper.scss
+++ b/src/shared_modules/Stepper/Stepper.scss
@@ -1,6 +1,6 @@
-@import "../../assets/scss/fonts";
-@import "../../assets/scss/variables"; 
-@import "../../assets/scss/mixins";
+@import "../../styles/partials/fonts";
+@import "../../styles/partials/variables"; 
+@import "../../styles/partials/mixins";
 
 .step-container{
     display: flex;
