--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,3 +49,14 @@ body {
   @media (min-width: 1080px) {
     body {
       background-color: azure; } }
+  body .main-title {
+    font-weight: "bold";
+    font-size: 1.5rem;
+    color: #00619e; }
+  body h3 {
+    font-weight: 300;
+    font-size: 1.5rem;
+    color: #00619e; }
+    @media (min-width: 540px) {
+      body h3 {
+        font-weight: bold; } }
