--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,3 +1,5 @@
+@import "./variables"; 
+
 @mixin phone-large {
   @media (min-width: 414px) { @content; }
 }
@@ -30,4 +32,10 @@
 
 @mixin desktop-large {
   @media (min-width: 1500px) { @content; }
+}
+
+@mixin mainTitle ($tereWeight) {
+  font-weight: $tereWeight;
+  font-size: 1.5rem;
+  color: $secondaryColor;
 }
