--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,6 +22,11 @@
   font-style: normal;
   font-display: swap; }
 
+body .main-title, body h3 {
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #00619e; }
+
 body {
   margin: 0px;
   padding: 0px; }
@@ -49,14 +54,6 @@ body {
   @media (min-width: 1080px) {
     body {
       background-color: azure; } }
-  body .main-title {
-    font-weight: "bold";
-    font-size: 1.5rem;
-    color: #00619e; }
-  body h3 {
-    font-weight: 300;
-    font-size: 1.5rem;
-    color: #00619e; }
-    @media (min-width: 540px) {
-      body h3 {
-        font-weight: bold; } }
+  @media (min-width: 540px) {
+    body h3 {
+      font-weight: bold; } }
