--- a/src/shared_modules/CardContainer/CardContainer.css
+++ b/src/shared_modules/CardContainer/CardContainer.css
@@ -23,12 +23,32 @@
   font-display: swap; }
 
 .card-container {
-  padding: 25px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 20px;
   text-align: left;
-  border: 1px solid;
-  margin: 0 2rem;
   display: flex;
-  flex-wrap: nowrap; }
+  flex-wrap: nowrap;
+  box-shadow: 0px 2px 12px 0px rgba(239, 239, 239, 0.5); }
+  .card-container .SelectComponent {
+    width: 90%;
+    margin: auto; }
+    @media (min-width: 1280px) {
+      .card-container .SelectComponent {
+        width: 70%; } }
+    .card-container .SelectComponent .css-yk16xz-control {
+      height: 50px;
+      border-color: lighten #808080, 0.25%; }
+      .card-container .SelectComponent .css-yk16xz-control .css-1wa3eu0-placeholder {
+        color: #B9B9B9;
+        font-weight: bold;
+        font-size: 0.9rem;
+        top: 52%; }
+        @media (min-width: 1080px) {
+          .card-container .SelectComponent .css-yk16xz-control .css-1wa3eu0-placeholder {
+            font-size: 0.7rem; } }
+      .card-container .SelectComponent .css-yk16xz-control .css-1okebmr-indicatorSeparator {
+        background-color: transparent; }
 
 .is-column {
   flex-direction: column; }
