--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
@@ -1,3 +1,28 @@
-.top-content {
-  margin-bottom: 20px;
-  margin-left: -10px; }
+.city-appointment {
+  max-width: 85%;
+  margin: auto; }
+  @media (min-width: 768px) {
+    .city-appointment {
+      max-width: 80%; } }
+  @media (min-width: 980px) {
+    .city-appointment {
+      max-width: 50%; } }
+  @media (min-width: 1280px) {
+    .city-appointment {
+      max-width: 50%; } }
+  .city-appointment .top-content {
+    margin: 26px 0px 30px 0px; }
+  .city-appointment .container-row {
+    display: flex;
+    justify-content: center; }
+  @media (min-width: 1080px) {
+    .city-appointment .content-city {
+      background-color: white;
+      min-height: 400px;
+      box-sizing: border-box;
+      padding: 20px;
+      border-radius: 10px; } }
+  @media (min-width: 1080px) {
+    .city-appointment .content-city .card-container {
+      box-shadow: none;
+      padding: 0px; } }
