--- a/src/shared_modules/CardContainer/CardContainer.scss
+++ b/src/shared_modules/CardContainer/CardContainer.scss
@@ -3,12 +3,44 @@
 @import "../../styles/partials/mixins";
 
 .card-container{
-    padding: 25px; 
+    background-color: $light;
+    border-radius: 8px;
+    padding: 20px; 
     text-align: left;
-    border: 1px solid;
-    margin: 0 2rem;     
     display: flex;
-    flex-wrap: nowrap;    
+    flex-wrap: nowrap;   
+    box-shadow: 0px 2px 12px 0px rgba(239, 239, 239, 0.5) ;
+
+
+    .SelectComponent{
+     width: 90%;
+     margin: auto;
+
+     @include desktop-medium{
+      width: 70%;
+     }
+
+    .css-yk16xz-control{
+     height: 50px;
+     border-color:lighten (#808080,0.25%);
+
+        .css-1wa3eu0-placeholder{
+            color: #B9B9B9;
+            font-weight: bold;
+            font-size: 0.9rem;
+            top: 52%;
+
+            @include desktop-small{
+            font-size: 0.7rem;
+            }
+           }
+
+        .css-1okebmr-indicatorSeparator{
+         background-color: transparent;
+        }
+    }
+}
+
 }
 
 .is-column{
