--- a/src/shared_modules/Stepper/Stepper.scss
+++ b/src/shared_modules/Stepper/Stepper.scss
@@ -3,8 +3,12 @@
 @import "../../styles/partials/mixins";
 
 .step-container{
+
+    ul{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    }
+
     .is-active{
     }
     .step{
