--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,10 +4,11 @@
 $primaryColor: #38b3b6; //lassik green;
 $primaryColorBg: #c4e7e8; //lassik green background
 $secondaryColor: #00619e; //lassik blue
-$tertiaryColor: #ff9900; //lassikOrange
+$tertiaryColor: #FF9900; //lassikOrange
 $warning: red;
 $dark: #000000;
 $light: #ffffff;
+$texto: #808080;
 
 
 /////////////////////////////
