--- a/src/shared_modules/Button/Button.css
+++ b/src/shared_modules/Button/Button.css
@@ -36,7 +36,8 @@
     width: max-content;
     text-transform: initial;
     box-sizing: border-box;
-    padding: 10px 25px 10px 36px; }
+    padding: 10px 25px 10px 36px;
+    margin-top: 0px; }
     .main-btn.back-button:after {
       content: "";
       position: absolute;
@@ -53,3 +54,19 @@
     @media (min-width: 1080px) {
       .main-btn.back-button {
         font-size: 0.7rem; } }
+  .main-btn.nav-number {
+    border-radius: 0px;
+    margin: 0px;
+    width: max-content;
+    font-size: 0.9rem;
+    padding: 12px 12px 12px 30px;
+    position: relative; }
+    .main-btn.nav-number:after {
+      content: "";
+      background-image: url(../../assets/images/icons/telf.svg);
+      background-repeat: no-repeat;
+      width: 20px;
+      height: 20px;
+      position: absolute;
+      left: 6px;
+      top: 10px; }
