--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
@@ -10,19 +10,15 @@
   @media (min-width: 1280px) {
     .city-appointment {
       max-width: 50%; } }
+  .city-appointment .title-seccion {
+    box-sizing: border-box;
+    padding: 15px 0px; }
+    .city-appointment .title-seccion h1 {
+      color: #00619e;
+      text-align: center;
+      font-size: 1.8rem; }
   .city-appointment .top-content {
     margin: 26px 0px 30px 0px; }
   .city-appointment .container-row {
     display: flex;
     justify-content: center; }
-  @media (min-width: 1080px) {
-    .city-appointment .content-city {
-      background-color: white;
-      min-height: 400px;
-      box-sizing: border-box;
-      padding: 20px;
-      border-radius: 10px; } }
-  @media (min-width: 1080px) {
-    .city-appointment .content-city .card-container {
-      box-shadow: none;
-      padding: 0px; } }
