--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/partials/mixins";
+@import "../../../styles/partials/variables";
 
 
 .city-appointment{
@@ -17,6 +18,17 @@
     max-width: 50%;
     }
 
+    .title-seccion{
+     box-sizing: border-box;
+     padding: 15px 0px;
+
+        h1{
+        color: $secondaryColor;
+        text-align:center;
+        font-size: 1.8rem;
+        }
+    }
+
     .top-content{
         margin: 26px 0px 30px 0px;
     }
@@ -24,25 +36,6 @@
     .container-row {
         display: flex;
         justify-content: center;
-    }
-
-    .content-city{
-      
-        @include desktop-small{
-            background-color: white;
-            min-height: 400px;
-            box-sizing: border-box;
-            padding: 20px;
-            border-radius: 10px;
-        }
-
-        .card-container{
-
-            @include desktop-small{
-            box-shadow: none;
-            padding: 0px;
-            }
-        }
     }
 
 }
