--- a/src/shared_modules/Navbar/Navbar.css
+++ b/src/shared_modules/Navbar/Navbar.css
@@ -1,11 +1,20 @@
 .navbar-container {
+  background-color: white;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 40px;
-  border-bottom: 1px solid grey; }
+  align-items: center;
+  margin-bottom: 30px;
+  box-sizing: border-box;
+  padding: 15px 10px;
+  box-shadow: 0px 2px 12px 0px rgba(237, 237, 237, 0.5); }
   .navbar-container .hamburguer div {
-    width: 35px;
-    height: 5px;
+    width: 30px;
+    height: 2px;
     background-color: grey;
     margin: 6px 0;
     border-radius: 2px; }
+  .navbar-container .logo {
+    width: 35%; }
+    .navbar-container .logo img {
+      width: 100%;
+      height: auto; }
