--- a/src/shared_modules/Navbar/Navbar.scss
+++ b/src/shared_modules/Navbar/Navbar.scss
@@ -1,13 +1,30 @@
 .navbar-container{
+    background-color: white;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
-    border-bottom: 1px solid grey;
-    .hamburguer div{
-        width: 35px;
-        height: 5px;
-        background-color: grey;
-        margin: 6px 0;
-        border-radius: 2px;
+    align-items: center;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+    padding: 15px 10px;
+    box-shadow: 0px 2px 12px 0px rgba(237, 237, 237, 0.50);
+    
+    .hamburguer{
+        div{
+            width: 30px;
+            height: 2px;
+            background-color: grey;
+            margin: 6px 0;
+            border-radius: 2px;
+        }
+
+    } 
+
+    .logo{
+     width: 35%;
+
+      img{
+      width: 100%;
+      height: auto;
+      }
     }
 }
