--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -47,24 +47,22 @@ body {
   font-family: "Gilroy";
   font-size: 1rem;
   color: #cccccc; }
-  body .title-seccion h1 {
-    font-size: 1.6rem;
-    color: #808080;
-    margin-bottom: 10px; }
-    @media (min-width: 1080px) {
-      body .title-seccion h1 {
-        font-size: 1.3rem; } }
-
-.content-select-comun ul {
-  width: 100%; }
-  .content-select-comun ul li {
-    display: flex;
-    align-items: center; }
-    .content-select-comun ul li .img-li {
-      width: 25%; }
-      .content-select-comun ul li .img-li img {
-        width: 100%;
-        height: auto; }
-    .content-select-comun ul li span {
+  body .wrapper-general {
+    max-width: 87%;
+    margin: auto; }
+    @media (min-width: 768px) {
+      body .wrapper-general {
+        max-width: 80%; } }
+    @media (min-width: 980px) {
+      body .wrapper-general {
+        max-width: 50%; } }
+    @media (min-width: 1280px) {
+      body .wrapper-general {
+        max-width: 50%; } }
+    body .wrapper-general h1 {
+      font-size: 1.6rem;
       color: #808080;
-      font-weight: bold; }
+      margin-bottom: 10px; }
+      @media (min-width: 1080px) {
+        body .wrapper-general h1 {
+          font-size: 1.3rem; } }
