--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
@@ -1,24 +1,32 @@
-.city-appointment {
-  max-width: 85%;
-  margin: auto; }
+.wrapper-general .title-seccion {
+  box-sizing: border-box;
+  padding: 15px 0px; }
   @media (min-width: 768px) {
-    .city-appointment {
-      max-width: 80%; } }
-  @media (min-width: 980px) {
-    .city-appointment {
-      max-width: 50%; } }
-  @media (min-width: 1280px) {
-    .city-appointment {
-      max-width: 50%; } }
-  .city-appointment .title-seccion {
-    box-sizing: border-box;
-    padding: 15px 0px; }
-    .city-appointment .title-seccion h1 {
-      color: #00619e;
-      text-align: center;
-      font-size: 1.8rem; }
-  .city-appointment .top-content {
-    margin: 26px 0px 30px 0px; }
-  .city-appointment .container-row {
-    display: flex;
-    justify-content: center; }
+    .wrapper-general .title-seccion {
+      padding: 40px 0px 30px 0px; } }
+  @media (min-width: 1080px) {
+    .wrapper-general .title-seccion {
+      padding: 35px 0px 20px 0px; } }
+  .wrapper-general .title-seccion h1 {
+    color: #00619e;
+    text-align: center;
+    font-size: 1.8rem;
+    margin-top: 0px; }
+    @media (min-width: 540px) {
+      .wrapper-general .title-seccion h1 {
+        font-size: 1.9rem; } }
+    @media (min-width: 1080px) {
+      .wrapper-general .title-seccion h1 {
+        font-size: 1.4rem; } }
+
+.wrapper-general .top-content {
+  margin: 26px 0px 30px 0px; }
+
+.wrapper-general .container-row {
+  display: flex;
+  justify-content: center; }
+
+@media (min-width: 1080px) {
+  .wrapper-general .content-select-comun .card-container ul {
+    width: 70%;
+    margin: auto; } }
