--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
@@ -2,30 +2,34 @@
 @import "../../../styles/partials/variables";
 
 
-.city-appointment{
- max-width: 85%;
- margin: auto;
-
-     @include tablet-medium{
-     max-width: 80%;
-     }
-
-     @include tablet-large{
-     max-width: 50%;
-     }
-
-     @include desktop-medium{
-    max-width: 50%;
-    }
+.wrapper-general{
 
     .title-seccion{
      box-sizing: border-box;
      padding: 15px 0px;
 
+
+       @include tablet-medium{
+        padding: 40px 0px 30px 0px;
+       }
+
+       @include desktop-small{
+        padding: 35px 0px 20px 0px;
+       }
+
         h1{
         color: $secondaryColor;
         text-align:center;
         font-size: 1.8rem;
+        margin-top:0px;
+
+           @include tablet-small{
+           font-size: 1.9rem;
+           }
+
+           @include desktop-small{
+           font-size: 1.4rem;
+           }
         }
     }
 
@@ -37,6 +41,22 @@
         display: flex;
         justify-content: center;
     }
+    
+
+    .content-select-comun{
+
+     
+         .card-container  {
+              ul{
+              @include desktop-small{
+                width: 70%;
+                margin: auto;
+              }
+
+              }
+         }
+    }
+
 
 }
 
