--- a/src/page_modules/appointments/TypeAppointmentPage/TypeAppointmentPage.css
+++ b/src/page_modules/appointments/TypeAppointmentPage/TypeAppointmentPage.css
@@ -1,4 +1,17 @@
-.type-image {
-  width: 100px;
-  height: auto;
-  margin-right: 10px; }
+.appointment-type-container .card-container .card:nth-child(1) {
+  margin-bottom: 12px; }
+  .appointment-type-container .card-container .card:nth-child(1) p {
+    position: relative;
+    box-sizing: border-box;
+    padding-top: 20px; }
+    .appointment-type-container .card-container .card:nth-child(1) p:before {
+      content: "";
+      background-image: url(../../../assets/images/icons/popular.svg);
+      background-repeat: no-repeat;
+      width: 98px;
+      height: 23px;
+      position: absolute;
+      top: -9px; }
+
+.appointment-type-container .card-container .card .type-image {
+  max-width: 30%; }
