--- a/src/shared_modules/Button/Button.css
+++ b/src/shared_modules/Button/Button.css
@@ -57,7 +57,6 @@
   .main-btn.nav-number {
     border-radius: 0px;
     margin: 0px;
-    width: max-content;
     font-size: 0.9rem;
     padding: 12px 12px 12px 30px;
     position: relative; }
@@ -70,3 +69,9 @@
       position: absolute;
       left: 6px;
       top: 10px; }
+    @media (min-width: 768px) {
+      .main-btn.nav-number {
+        width: 100%; } }
+    @media (min-width: 768px) {
+      .main-btn.nav-number {
+        font-size: 0.7rem; } }
