--- a/src/shared_modules/Card/Card.css
+++ b/src/shared_modules/Card/Card.css
@@ -23,8 +23,14 @@
   font-display: swap; }
 
 .card {
+  border: 1px solid #e4e4e4;
+  border-radius: 10px;
+  padding: 10px;
   display: flex;
-  justify-content: center;
-  align-content: center;
-  padding: 30px;
-  margin: 10px 0; }
+  align-items: center; }
+
+p {
+  color: #808080;
+  font-weight: bold;
+  font-size: 0.9rem;
+  margin-left: 15px; }
