--- a/src/shared_modules/Navbar/Navbar.css
+++ b/src/shared_modules/Navbar/Navbar.css
@@ -7,14 +7,31 @@
   box-sizing: border-box;
   padding: 15px 10px;
   box-shadow: 0px 2px 12px 0px rgba(237, 237, 237, 0.5); }
-  .navbar-container .hamburguer div {
-    width: 30px;
-    height: 2px;
-    background-color: grey;
-    margin: 6px 0;
-    border-radius: 2px; }
+  @media (min-width: 768px) {
+    .navbar-container {
+      padding: 15px; } }
+  .navbar-container .second-nav {
+    display: flex;
+    align-items: center; }
+    .navbar-container .second-nav .hamburguer {
+      margin-left: 10px; }
+      @media (min-width: 414px) {
+        .navbar-container .second-nav .hamburguer {
+          margin-left: 20px; } }
+      @media (min-width: 540px) {
+        .navbar-container .second-nav .hamburguer {
+          width: 20%; } }
+      .navbar-container .second-nav .hamburguer div {
+        width: 30px;
+        height: 2px;
+        background-color: grey;
+        margin: 6px 0;
+        border-radius: 2px; }
   .navbar-container .logo {
-    width: 35%; }
+    max-width: 30%; }
+    @media (min-width: 414px) {
+      .navbar-container .logo {
+        max-width: 50%; } }
     .navbar-container .logo img {
       width: 100%;
       height: auto; }
