--- a/src/page_modules/appointments/TypeAppointmentPage/TypeAppointmentPage.scss
+++ b/src/page_modules/appointments/TypeAppointmentPage/TypeAppointmentPage.scss
@@ -3,6 +3,7 @@
     .card-container{
 
         .card{
+         min-height: 145px;
 
             &:nth-child(1){
             margin-bottom: 12px; 
