--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.css
@@ -19,14 +19,25 @@
       .wrapper-general .title-seccion h1 {
         font-size: 1.4rem; } }
 
-.wrapper-general .top-content {
-  margin: 26px 0px 30px 0px; }
-
-.wrapper-general .container-row {
-  display: flex;
-  justify-content: center; }
-
-@media (min-width: 1080px) {
-  .wrapper-general .content-select-comun .card-container ul {
+@media (min-width: 768px) {
+  .wrapper-general .city-appointment-container .card-container .card {
     width: 70%;
     margin: auto; } }
+
+.wrapper-general .city-appointment-container .card-container .card:nth-child(1) {
+  margin-bottom: 15px; }
+
+.wrapper-general .city-appointment-container .card-container .card:nth-child(2) {
+  margin-bottom: 15px; }
+
+.wrapper-general .city-appointment-container .card-container .card .type-image-city {
+  width: 25%; }
+  @media (min-width: 540px) {
+    .wrapper-general .city-appointment-container .card-container .card .type-image-city {
+      width: 18%; } }
+
+.wrapper-general .city-appointment-container .card-container .card p {
+  font-size: 1.1rem; }
+  @media (min-width: 1080px) {
+    .wrapper-general .city-appointment-container .card-container .card p {
+      font-size: 0.9rem; } }
