--- a/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
+++ b/src/page_modules/appointments/CityAppointmentPage/CityAppointmentPage.scss
@@ -33,30 +33,51 @@
         }
     }
 
-    .top-content{
-        margin: 26px 0px 30px 0px;
-    }
-
-    .container-row {
-        display: flex;
-        justify-content: center;
-    }
-    
-
-    .content-select-comun{
-
+    .city-appointment-container{
      
-         .card-container  {
-              ul{
-              @include desktop-small{
+        .card-container{
+
+            .card{
+
+                @include tablet-medium{
                 width: 70%;
                 margin: auto;
-              }
+                }
 
-              }
-         }
+                // @include desktop-small{
+                // width: 90%;
+                // }
+             
+                &:nth-child(1){
+                margin-bottom: 15px;
+                }
+
+                &:nth-child(2){
+                margin-bottom: 15px;
+                }
+
+                .type-image-city{
+                 width: 25%;
+
+                   @include tablet-small{
+                   width: 18%;
+                   }
+                }
+
+                p{
+                font-size: 1.1rem;
+
+                    @include desktop-small{
+                    font-size: 0.9rem;
+                    }
+
+
+                }
+            }
+          
+        }
+
     }
-
 
 }
 
