--- a/src/shared_modules/Stepper/Stepper.css
+++ b/src/shared_modules/Stepper/Stepper.css
@@ -22,29 +22,31 @@
   font-style: normal;
   font-display: swap; }
 
-.step-container ul {
-  display: flex;
-  justify-content: space-between;
-  margin: 0px; }
-  .step-container ul .step {
+.step-container {
+  margin-bottom: 20px; }
+  .step-container ul {
     display: flex;
-    flex-direction: column; }
-    .step-container ul .step .circle-num {
-      background-color: #00619e;
-      border-radius: 50px;
-      width: 28px;
-      height: 28px;
+    justify-content: space-between;
+    margin: 0px; }
+    .step-container ul .step {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: auto; }
-      .step-container ul .step .circle-num .num {
+      flex-direction: column; }
+      .step-container ul .step .circle-num {
+        background-color: #00619e;
+        border-radius: 50px;
+        width: 28px;
+        height: 28px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: auto; }
+        .step-container ul .step .circle-num .num {
+          font-size: 0.8rem;
+          color: #ffffff;
+          vertical-align: middle; }
+      .step-container ul .step .text-step {
+        color: #00619e;
+        font-weight: 300;
         font-size: 0.8rem;
-        color: #ffffff;
-        vertical-align: middle; }
-    .step-container ul .step .text-step {
-      color: #00619e;
-      font-weight: 300;
-      font-size: 0.8rem;
-      box-sizing: border-box;
-      padding-top: 5px; }
+        box-sizing: border-box;
+        padding-top: 5px; }
