--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -62,7 +62,7 @@ body {
     body .wrapper-general h1 {
       font-size: 1.6rem;
       color: #808080;
-      margin-bottom: 10px; }
+      margin: 20px 0px 10px 0px; }
       @media (min-width: 1080px) {
         body .wrapper-general h1 {
           font-size: 1.3rem; } }
