--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -64,7 +64,7 @@ body {
 		h1{
 		font-size:1.6rem;
 		color: $texto ;
-		margin-bottom: 10px;
+		margin: 20px 0px 10px 0px;
 
 		@include desktop-small{
 		font-size: 1.3rem;
@@ -73,4 +73,3 @@ body {
 
 	}
 }
-
