--- a/src/shared_modules/Card/Card.css
+++ b/src/shared_modules/Card/Card.css
@@ -27,7 +27,19 @@
   border-radius: 10px;
   padding: 10px;
   display: flex;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
+  .card:active {
+    border: 1.2px solid #FF9900; }
+    .card:active:after {
+      content: "";
+      position: absolute;
+      top: -15px;
+      right: 0;
+      background-image: url(../../assets/images/icons/tick.svg);
+      background-repeat: no-repeat;
+      width: 35px;
+      height: 35px; }
   .card p {
     color: #808080;
     font-weight: bold;
