--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -64,7 +64,7 @@ body {
 		h1{
 		font-size:1.6rem;
 		color: $texto ;
-		margin: 20px 0px 10px 0px;
+		margin: 30px 0px 10px 0px;
 
 		@include desktop-small{
 		font-size: 1.3rem;
@@ -73,3 +73,9 @@ body {
 
 	}
 }
+
+.container-button{
+ display: flex;
+ justify-content: center;
+}
+
